1 October 2020
xml.c:/ in unquoted (x/html) attribute does not indicate empty tag. /> does.
e.g. <a href=http://www.aaa.bb/cde/index.html>
MLencoding:Check meta tag if xml declaration inconclusive 

30 September 2020
toML: if xml declaration encountered, make sure that there is exactly one "?"
before the ">" of the xml declaration and before all ">" in all Processing
Instructions.

20 June 2020
Removed the third (and last) number from the data structure that is returned by
the bez$ function, since this number is always 0.

17 June 2020
If f=g, then !(&!f) behaves like !!f both in eval and match context.
Fixed bug that permanently attached a ? flag to g when evaluating 17:?(&!f),
so that 17:!(&!f) did not work as expected.

17 January 2020
Updated with http://unicode.org/Public/UNIDATA/UnicodeData.txt 01-Apr-2019 00:08

3 November 2019
Discovered two unwarranted assertions while evaluating expressions with
complex numbers. The code was correct. The assertions are removed. 
Tests added to valid.bra. See also 
https://codegolf.stackexchange.com/questions/161483/expand-sine-and-cosine/195251#195251

24 May 2019 
Renamed variable 'nice' to 'beNice', since 'nice' is a reserved word in some
C-implementations. Also use printf format %lu instead of %zu if __VMS is
defined. Many thanks to https://github.com/TheFausap for porting Bracmat to
OpenVMS and for testing.

23 May 2019
Put #ifdef __VMS ... #endif around yesterday's change in wmv$ implementation.  

22 May 2019 
If remove() returns a value that is not 0, EACCES or ENOENT, and
strerror(errno) evaluates to "file currently locked by another user",
then rmv$ returns EACCES. Added two typecasts for strcmp #ifdef __VMS.

18 May 2019
In Bracmat.c, in the implementation of the rmv function, if errno is non-zero
and neither EACCES nor ENOENT, use strerror(errno) to explain what remove() is
complaining about.
In valid.bra, test 753 is improved. In the first loop counting from 1 to 1000,