@@ -1,3 +1,6 @@
+25 January 2021
+java-JNI/dk_cst_bracmat.c : Added (*env)->ReleaseStringUTFChars(expr, str);
+
 1 October 2020
 xml.c:/ in unquoted (x/html) attribute does not indicate empty tag. /> does.
 e.g. <a href=http://www.aaa.bb/cde/index.html>
